--- a/idcka.ipynb
+++ b/idcka.ipynb
@@ -2,17 +2,30 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 19,
    "id": "dce4138b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requirement already satisfied: arduino-iot-client in c:\\users\\hp\\anaconda3\\lib\\site-packages (1.4.2)\n",
+      "Requirement already satisfied: certifi in c:\\users\\hp\\anaconda3\\lib\\site-packages (from arduino-iot-client) (2021.10.8)\n",
+      "Requirement already satisfied: six>=1.10 in c:\\users\\hp\\anaconda3\\lib\\site-packages (from arduino-iot-client) (1.16.0)\n",
+      "Requirement already satisfied: python-dateutil in c:\\users\\hp\\anaconda3\\lib\\site-packages (from arduino-iot-client) (2.8.2)\n",
+      "Requirement already satisfied: urllib3>=1.15 in c:\\users\\hp\\anaconda3\\lib\\site-packages (from arduino-iot-client) (1.26.9)\n",
+      "Note: you may need to restart the kernel to use updated packages.\n"
+     ]
+    }
+   ],
    "source": [
     "pip install arduino-iot-client"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 20,
    "id": "a0899fa6",
    "metadata": {},
    "outputs": [
@@ -20,14 +33,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Requirement already satisfied: requests-oauthlib in c:\\users\\hp\\anaconda3\\lib\\site-packages (1.3.1)Note: you may need to restart the kernel to use updated packages.\n",
-      "Requirement already satisfied: requests>=2.0.0 in c:\\users\\hp\\anaconda3\\lib\\site-packages (from requests-oauthlib) (2.27.1)\n",
+      "Requirement already satisfied: requests-oauthlib in c:\\users\\hp\\anaconda3\\lib\\site-packages (1.3.1)\n",
       "Requirement already satisfied: oauthlib>=3.0.0 in c:\\users\\hp\\anaconda3\\lib\\site-packages (from requests-oauthlib) (3.2.2)\n",
+      "Requirement already satisfied: requests>=2.0.0 in c:\\users\\hp\\anaconda3\\lib\\site-packages (from requests-oauthlib) (2.27.1)\n",
+      "Requirement already satisfied: idna<4,>=2.5 in c:\\users\\hp\\anaconda3\\lib\\site-packages (from requests>=2.0.0->requests-oauthlib) (3.3)\n",
       "Requirement already satisfied: urllib3<1.27,>=1.21.1 in c:\\users\\hp\\anaconda3\\lib\\site-packages (from requests>=2.0.0->requests-oauthlib) (1.26.9)\n",
       "Requirement already satisfied: charset-normalizer~=2.0.0 in c:\\users\\hp\\anaconda3\\lib\\site-packages (from requests>=2.0.0->requests-oauthlib) (2.0.4)\n",
-      "Requirement already satisfied: idna<4,>=2.5 in c:\\users\\hp\\anaconda3\\lib\\site-packages (from requests>=2.0.0->requests-oauthlib) (3.3)\n",
       "Requirement already satisfied: certifi>=2017.4.17 in c:\\users\\hp\\anaconda3\\lib\\site-packages (from requests>=2.0.0->requests-oauthlib) (2021.10.8)\n",
-      "\n"
+      "Note: you may need to restart the kernel to use updated packages.\n"
      ]
     }
    ],
@@ -37,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 28,
    "id": "f37b7616",
    "metadata": {},
    "outputs": [
@@ -101,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 32,
    "id": "48d4314f",
    "metadata": {},
    "outputs": [
@@ -111,20 +124,33 @@
      "text": [
       "User device pid\n",
       "====================================\n",
-      "05c6d41d-bc37-4cd5-ac87-b0ad726e195b\n"
+      "2c7b8052-e8bf-4d4f-9391-dee629d6faa5\n"
      ]
     }
    ],
    "source": [
     "# Device\n",
-    "print(\"User device pid\")\n",
+    "print(\"Device\")\n",
     "print(\"====================================\")\n",
     "print(devices.devices_v2_list()[2].id)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": null,
+   "id": "af91353a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# User pid value\n",
+    "print('User device pid')\n",
+    "print(\"===================================================\")\n",
+    "print(devices.devices_v2_get_properties('05c6d41d-bc37-4cd5-ac87-b0ad726e195b').properties[0].thing_id)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
    "id": "30448404",
    "metadata": {},
    "outputs": [
@@ -132,6 +158,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "User device pid\n",
+      "===================================================\n",
+      "f9d0897d-b142-4b48-9a45-7d25a28d4e79\n",
+      " \n",
       "User value: id value\n",
       "===================================================\n",
       "e_k1: f9d0897d-b142-4b48-9a45-7d25a28d4e79\n",
@@ -161,7 +191,7 @@
     }
    ],
    "source": [
-    "# User values\n",
+    "# User id values\n",
     "print('User value: id value')\n",
     "print(\"===================================================\")\n",
     "for i in (devices.devices_v2_get_properties('05c6d41d-bc37-4cd5-ac87-b0ad726e195b').properties):\n",
